Rework pausing and move execution of animations